@@ -33,6 +33,10 @@ LOG_LEVELS = (
     (logging.FATAL, 'fatal'),
 )
 
+DEFAULT_LOG_LEVEL = 'error'
+
+DEFAULT_LOGGER_NAME = 'root'
+
 ADMINS = []
 
 # Absolute URL to the sentry root directory. Should not include a trailing slash.
